--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,13 @@
     <nav ng-controller="NavCtrl">
         <!--<nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">-->
         <ul>
+            <!-- 
+                href is sent to angularApp.js ->
+                    app.config ->
+                        $stateProvider ->
+                            choose state by matching URL ->
+                                return templateUrl   
+            -->
             <li ng-show="isLoggedIn()"><a class="ng-binding">{{currentUser()}}</a></li>
             <li ng-show="isLoggedIn()"><a href="/#/home">תפריט ראשי</a></li>
             <li ng-show="isLoggedIn()"><a href="/#/message_board">לוח הודעות</a></li>
@@ -31,6 +38,7 @@
             <ui-view></ui-view>
         </div>
     </div>
+
 
 
     <!--TEMPLATES ARE BELOW-->
@@ -235,12 +243,12 @@
         <input class="editable-field" ng-model="section.slug" ng-disabled="!edit" value="{{section.slug}}">
         <br />
         </span>
+
+        
         <div ng-repeat="staffGroup in staffGroups | orderBy:'group'">
         <!--NEED TO MAKE CHANGES TO NG-CLICK HERE-->
-            <input type="checkbox" ng-checked="section.staffGroup._id === staffGroup._id" ng-click="toggleCheck(staffGroup)" />                        <label>{{staffGroup.group+'.'+staffGroup.name}}</label>
+            <input type="checkbox" ng-checked="staffGroupIndex(staffGroup, section.staffGroups) > -1" ng-click="toggleCheck(staffGroup, section.staffGroups)" ng-disabled="!edit"/>                        <label>{{staffGroup.group+'.'+staffGroup.name}}</label>
         </div>
-
-
                     <span>
         <label>תאריך הוספה:</label> {{section.dateCreated | date:'dd/MM/yyyy - HH:mm:ss'}}
         <br />
