--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,8 +80,7 @@
             <span ng-show="post.author">posted by <a>{{post.author}}</a> |</span>
             <span><a href="#/posts/{{post._id}}">Comments</a></span>
             <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
-                <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span> {{comment.upvotes}}
-                - by {{comment.author}}
+                <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span> {{comment.upvotes}} - by {{comment.author}}
                 <span style="font-size:20px; margin-left:10px;">
                     {{comment.body}}
                 </span>
@@ -109,8 +108,7 @@
             </div>
             <!-- rest of template -->
             <div ng-hide="isLoggedIn()">
-                <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can enter section
-                    manager.
+                <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can enter section manager.
                 </h3>
             </div>
 
@@ -183,8 +181,7 @@
             </div>
             <!-- rest of template -->
             <div ng-hide="isLoggedIn()">
-                <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can enter section
-                    manager.
+                <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can enter section manager.
                 </h3>
             </div>
 
@@ -237,8 +234,7 @@
 
                     <div ng-repeat="staffGroup in staffGroups | orderBy:'group'">
                         <!--NEED TO MAKE CHANGES TO NG-CLICK HERE-->
-                        <input type="checkbox" ng-checked="staffGroupIndex(staffGroup, section.staffGroups) > -1" ng-click="toggleCheck(staffGroup, section.staffGroups)"
-                            ng-disabled="!edit" /> <label>{{staffGroup.group+'.'+staffGroup.name}}</label>
+                        <input type="checkbox" ng-checked="staffGroupIndex(staffGroup, section.staffGroups) > -1" ng-click="toggleCheck(staffGroup, section.staffGroups)" ng-disabled="!edit" /> <label>{{staffGroup.group+'.'+staffGroup.name}}</label>
                     </div>
                     <span>
         <label>תאריך הוספה:</label> {{section.dateCreated | date:'dd/MM/yyyy - HH:mm:ss'}}
@@ -274,8 +270,7 @@
             </div>
             <!-- rest of template -->
             <div ng-hide="isLoggedIn()">
-                <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can enter section
-                    manager.
+                <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can enter section manager.
                 </h3>
             </div>
 
@@ -311,30 +306,6 @@
 
 
 
-
-
-                <!--<div>
-                     ng-click activate function in controller which adds a new field 
-
-
-                    <input type="button" class="btn btn-info" ng-click="addNewField()" value="הוספת שדה">
-                    <div>
-                         generate fields for each element in fieldSet.fields in the controller 
-
-
-                        <fieldset data-ng-repeat="field in fieldSet.fields track by $index">
-                            <input ng-model="fieldSet.fields[$index]" />
-                            <select ng-model="selectedDataType.value" ng-change="updateDataType($index, selectedDataType.value.value)" ng-options="dataType.placeholder for dataType in dataTypes">
-                                <option value="">סוג הקלט:</option>
-                            </select>
-                            <button type="button" class="btn btn-default btn-sm" ng-click="removeField($index)">
-                            <span class="glyphicon glyphicon-minus"></span> הסרת שדה
-                            </button>
-                        </fieldset>
-                    </div>
-                </div>-->
-
-
                 <div>
                     <!-- ng-click activate function in controller which adds a new field -->
                     <input type="button" class="btn btn-info" ng-click="addNewField()" value="הוספת שדה">
@@ -343,6 +314,8 @@
                         <fieldset data-ng-repeat="field in fields track by $index">
                             <!-- input model according to fields name -->
                             <input ng-model="field.name" />
+                            <!-- dataType model according to data type -->
+                            <!-- ng-change call is obsolete!!!! -->
                             <select ng-model="field.dataType" ng-change="updateDataType($index, dataType)" ng-options="dataType.placeholder for dataType in dataTypes">
                                 <option value="">סוג הקלט:</option>
                             </select>
@@ -361,10 +334,10 @@
 
             <!-- EXISTING Format Criterias -->
             <div ng-repeat="formatCriteria in formatCriterias | orderBy:'num'">
-
-                <span style="font-size:20px; margin-left:10px;">
+                <hr width="100%" size="8" align="center" noshade>
+                <span style=" font-size:20px; margin-left:10px;">
       <span>
-        <label class="label-field">מספר: </label>
+        <label class="label-field"0>מספר: </label>
         <input class="editable-field" ng-model="formatCriteria.num" ng-disabled="!edit" value="{{formatCriteria.num}}">
         <br />
       </span>
@@ -389,7 +362,7 @@
 
                 <div>
                     <label> תחום פעילות: 
-                    <select ng-model="formatCriteria.section" ng-init="formatCriteria.section=sections[getSectionIndexByNum(formatCriteria.section.num)]" ng-options="(section.num+'.'+section.name) for section in sections" ng-disabled="!edit" value="{{section}}">
+                    <select ng-model="formatCriteria.section" ng-init="formatCriteria.section=sections[getSectionIndexByNum(formatCriteria.section.num)]" ng-options="(section.num+ '.'+section.name) for section in sections" ng-disabled="!edit" value="{{section}}">
                     </select>
                 </label>
                 </div>
@@ -403,8 +376,7 @@
                         <fieldset ng-model="fieldUser" data-ng-repeat="fieldUser in formatCriteria.fields track by $index">
                             <!-- input model according to fields name -->
                             <input ng-model="fieldUser.name" />
-                            <select ng-model="fieldUser.dataType" ng-init="fieldUser.dataType=dataTypes[fieldUser.id]" ng-change="updateDataType($index, dataType.dataType, formatCriteria.fields)"
-                                ng-options="dataType.placeholder for dataType in dataTypes track by dataType.id">
+                            <select ng-model="fieldUser.dataType" ng-init="fieldUser.dataType=dataTypes[fieldUser.id-1]" ng-change="updateDataType($index, dataType.dataType, formatCriteria.fields)" ng-options="dataType.placeholder for dataType in dataTypes track by dataType.id">
                                 <option value="">סוג הקלט:</option>
                             </select>
                             <button type="button" class="btn btn-default btn-sm" ng-click="removeField($index,formatCriteria.fields)">
@@ -450,9 +422,8 @@
                 <span ng-hide="post.link">{{post.title}}</span>
             </h3>
         </div>
-        <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
-            <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span> {{comment.upvotes}}
-            - by {{comment.author}}
+        <div ng-repeat="comment in post.comments | orderBy: '-upvotes'">
+            <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span> {{comment.upvotes}} - by {{comment.author}}
             <span style="font-size:20px; margin-left:10px;">{{comment.body}}
         </div>
         <form ng-submit="addComment()" ng-show="isLoggedIn()" style="margin-top:30px;">
