--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,15 @@
     <title>ASES</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
+    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">-->
+    <!--<link rel="stylesheet" href="/stylesheets/build.css">-->
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
     <script src="/javascripts/angularApp.js"></script>
     <link href="/stylesheets/style.css" rel="stylesheet">
+
 
 </head>
 
@@ -28,6 +33,7 @@
             <li ng-show="isLoggedIn()"><a href="/#/staff_groups">ניהול קבוצות חברי סגל</a></li>
             <li ng-show="isLoggedIn()"><a href="/#/sections">ניהול תחומי פעילות</a></li>
             <li ng-show="isLoggedIn()"><a href="/#/format_criterias">ניהול קריטריונים להערכה</a></li>
+            <li ng-show="isLoggedIn()"><a href="/#/format_forms">ניהול טפסי הערכה</a></li>
             <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">התנתקות</a></li>
             <li class="ng-hide" ng-hide="isLoggedIn()"><a href="/#/login">התחברות</a></li>
             <li class="ng-hide" ng-hide="isLoggedIn()"><a href="/#/register">הרשמה</a></li>
@@ -127,8 +133,9 @@
                 <button type="submit" class="btn btn-primary">הוספה</button>
             </form>
 
+            <!--EXISTING STAFF GROUPS-->
             <div ng-repeat="staffGroup in staffGroups | orderBy:'group'">
-
+                <hr width="100%" size="8" align="center" noshade>
                 <div>
                     <span style="font-size:20px; margin-left:10px;">
       <span>
@@ -205,13 +212,12 @@
                 <button type="submit" class="btn btn-primary">הוספה</button>
             </form>
 
-            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
             <br />
 
 
             <!-- EXISTING SECTIONS -->
             <div ng-repeat="section in sections | orderBy:'num'">
-
+                <hr width="100%" size="8" align="center" noshade>
 
                 <div>
                     <span style="font-size:20px; margin-left:10px;">
@@ -260,9 +266,6 @@
         </div>
     </script>
 
-
-
-    <!-- MISSING IMPLEMENTATION OF EDITABLE FIELDS -->
     <script type="text/ng-template" id="/format_criterias.html">
         <div>
             <div class="page-header">
@@ -370,10 +373,10 @@
 
                 <div>
                     <!-- ng-click activate function in controller which adds a new field -->
-                    <input type="button" class="btn btn-info" ng-click="addNewField(formatCriteria.fields)" value="הוספת שדה">
+                    <input type="button" class="btn btn-info" ng-click="addNewField(formatCriteria.fields)" ng-disabled="!edit" value="הוספת שדה">
                     <div>
                         <!-- generate fields for each element in fields in the controller -->
-                        <fieldset ng-model="fieldUser" data-ng-repeat="fieldUser in formatCriteria.fields track by $index">
+                        <fieldset ng-model="fieldUser" ng-disabled="!edit" data-ng-repeat="fieldUser in formatCriteria.fields track by $index">
                             <!-- input model according to fields name -->
                             <input ng-model="fieldUser.name" />
                             <select ng-model="fieldUser.dataType" ng-init="fieldUser.dataType=dataTypes[fieldUser.id-1]" ng-change="updateDataType($index, dataType.dataType, formatCriteria.fields)" ng-options="dataType.placeholder for dataType in dataTypes track by dataType.id">
@@ -407,6 +410,133 @@
             </div>
         </div>
     </script>
+
+
+
+
+
+
+
+
+
+
+    <script type="text/ng-template" id="/format_forms.html">
+        <div>
+            <div class="page-header">
+                <h1>ASES - ניהול טפסי הערכה</h1>
+            </div>
+            <!-- rest of template -->
+            <div ng-hide="isLoggedIn()">
+                <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can enter section manager.
+                </h3>
+            </div>
+
+            <form ng-submit="addFormatForm()" ng-show="isLoggedIn()" style="margin-top:30px;">
+                <h3>הוספת טופס הערכה חדש</h3>
+
+
+                <!--<div class="form-group">
+                    <input type="num" class="form-control" placeholder="מספר" ng-model="num"></input>
+                </div>-->
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="שם" ng-model="name" ng-required="true"></input>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="תיאור" ng-model="slug"></input>
+                </div>
+
+
+
+                <div ng-repeat="section in sections">
+                    {{section.num+'.'+section.name}}
+                    <button type="button" ng-click="toggle(section)" ng-show="!section.toggle" class="btn-primary">הצג קריטריונים</button>
+                    <button type="button" ng-click="toggle(section)" ng-show="section.toggle" class="btn-warning">הסתר קריטריונים</button>
+                    <div ng-if="section.num===formatCriteria.section.num" ng-hide="!section.toggle" ng-repeat="formatCriteria in formatCriterias | orderBy:'section.num'">
+
+                        <!--<div class="checkbox checkbox-warning">-->
+                        <div>
+                            <input type="checkbox" class="styled" ng-click="toggleCheck(formatCriteria)" /> {{formatCriteria.name}}
+                            <!--<input type="checkbox" ng-checked="checkedStaffGroups.indexOf(staffGroup) != -1" ng-click="toggleCheck(staffGroup)" /> {{formatCriteria.name}}-->
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+
+
+                <br />
+                <button type="submit" class="btn btn-primary">הוספה</button>
+            </form>
+
+
+            <!-- REQUIRED IMPLEMENTATION -->
+            <!-- EXISTING Format Forms -->
+            <label>עריכת טפסים</label>
+            <div ng-repeat="formatForm in formatForms | orderBy:'num'">
+                <hr width="100%" size="8" align="center" noshade>
+                <button class="btn-primary" ng-click="toggle(formatForm)">{{formatForm.name}}</button>
+                <div ng-show="formatForm.toggle">
+
+                    <span style=" font-size:20px; margin-left:10px;">
+      <span>
+        <label class="label-field">מספר: </label>
+        <input class="editable-field" ng-model="formatForm.num" ng-disabled="!edit" value="{{formatForm.num}}">
+        <br />
+      </span>
+                    <span>
+        <label class="label-field">שם: </label>
+        <input class="editable-field" ng-model="formatForm.name" ng-disabled="!edit" value="{{formatForm.name}}">
+        <br />
+      </span>
+                    <span ng-show="formatForm.slug || edit">
+        <label class="label-field">תיאור: </label>
+        <input class="editable-field" ng-model="formatForm.slug" ng-disabled="!edit" value="{{formatForm.slug}}">
+        <br />
+        </span>
+
+
+                    <div ng-repeat="section in sections">
+                        {{section.num+'.'+section.name}}
+                        <button type="button" ng-click="toggle(section)" ng-show="!section.toggle" class="btn-primary">הצג קריטריונים</button>
+                        <button type="button" ng-click="toggle(section)" ng-show="section.toggle" class="btn-warning">הסתר קריטריונים</button>
+                        <div ng-if="section.num===formatCriteriaUser.section.num" ng-hide="!section.toggle" ng-repeat="formatCriteriaUser in formatCriterias | orderBy:'section.num'">
+                            <!--{{formatCriteriaUser}}-->
+                            <div>
+                                <input type="checkbox" ng-disabled="!edit" ng-checked="formatCriteriaIndex(formatCriteriaUser, formatForm.formatCriterias) > -1" ng-click="toggleCheck(formatCriteriaUser, formatForm.formatCriterias)" /> {{formatCriteriaUser.name}}
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+
+                    <span>
+       <label>תאריך הוספה:</label> {{formatCriteria.dateCreated | date:'dd/MM/yyyy - HH:mm:ss'}}
+       <br />
+      </span>
+                    <span ng-hide="formatForm.dateCreated===formatForm.dateModified">
+         <label>נערך לאחרונה:</label> {{formatForm.dateModified | date:'dd/MM/yyyy - HH:mm:ss'}}
+         <br />
+      </span>
+
+                    <span>
+        <label>לחץ לעריכה: <input type="checkbox" ng-model="edit"></label>
+
+        <button ng-click="editFormatForm($index, formatForm)" class="btn btn-primary" ng-disabled="!edit">שמור שינויים</button>
+        <button ng-click="deleteFormatForm(formatForm)" class="btn btn-danger" ng-disabled="!edit">מחק תחום פעילות זה</button>
+        <br />
+      </span>
+                    </span>
+
+                </div>
+            </div>
+
+
+        </div>
+    </script>
+
+
+
+
+
 
 
 
