--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
+    <script src="/bower_components/angular-csv-import/dist/angular-csv-import.js"></script>
+    <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-csv/0.3.6/ng-csv.min.js"></script>
+
+
     <script src="/javascripts/angularApp.js"></script>
     <link href="/stylesheets/style.css" rel="stylesheet">
 
@@ -33,6 +38,7 @@
             <li ng-show="isLoggedIn()"><a class="ng-binding">מחובר כ -  {{currentUser()}}</a></li>
             <li ng-show="isLoggedIn()"><a href="/#/home">תפריט ראשי</a></li>
             <!--<li ng-show="isLoggedIn()"><a href="/#/message_board">לוח הודעות</a></li>-->
+            <li ng-show="isLoggedIn()"><a href="/#/admin_menu">תפריט מנהל</a></li>
             <li ng-show="isLoggedIn()"><a href="/#/staff_groups">ניהול קבוצות חברי סגל</a></li>
             <li ng-show="isLoggedIn()"><a href="/#/sections">ניהול תחומי פעילות</a></li>
             <li ng-show="isLoggedIn()"><a href="/#/format_criterias">ניהול קריטריונים להערכה</a></li>
@@ -62,10 +68,65 @@
 
         ברוך הבא: {{currentUser()}}
 
-
     </script>
 
 
+    <script type="text/ng-template" id="/admin_menu.html">
+        <div class="page-header">
+            <h1>ASES - Admin Menu</h1>
+        </div>
+        <!-- rest of template -->
+        <div ng-hide="isLoggedIn()">
+            <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can add a post.</h3>
+        </div>
+
+        ברוך הבא: {{currentUser()}}
+
+
+        <div class="block row">
+            <div class="title">
+                <h4>Select your CSV file: </h4>
+            </div>
+            <div class="block right">
+                <ng-csv-import class="import" content="csv.content" header="csv.header" header-visible="csv.headerVisible" separator="csv.separator" separator-visible="csv.separatorVisible" result="csv.result" encoding="csv.encoding" encoding-visible="csv.encodingVisible"
+                    upload-button-label="csv.uploadButtonLabel" progress-callback="csv.progressCallback" streaming-callback="csv.streamingCallback" streaming-error-callback="csv.streamingCallback"></ng-csv-import>
+            </div>
+        </div>
+
+        <div ng-if="progress">
+            <md-progress-linear md-mode="determinate" class="md-warn" value="{{progress}}"></md-progress-linear>
+        </div>
+
+        <div class="block row" ng-if="csv.result">
+            <!--{{toPrettyJSON(csv.result, 2)}} -->
+            <!--<div class="content" hljs source="toPrettyJSON(preview, 2)"></div>-->
+
+
+            <!--<form ng-submit="register()" style="margin-top:30px;">
+                <h3>Register</h3>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Username" ng-model="user.username" disabled></input>
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Password" ng-model="user.password" disabled></input>
+                </div>
+                <button type="submit" class="btn btn-primary">Register</button>
+            </form>-->
+
+            <div ng-repeat="rec in csv.result">
+                <span>{{rec.username}} <button ng-click="registerFromCSV(rec)">Add</button></span>
+            </div>
+            <button type="button" ng-csv="exportToCSV" filename="test.csv">Export</button>
+
+            <div ng-repeat="rec1 in exportToCSV">
+                <span>{{rec1}}</span>
+            </div>
+        </div>
+
+
+
+    </script>
 
 
     <script type="text/ng-template" id="/message_board.html">
